added collision JQuery lib and a bunch of other things

--- a/index.html
+++ b/index.html
@@ -33,9 +33,14 @@
 		<!-- bibliotecas jquery -->
 		<script
 			type="text/javascript"
-			src="js/jquery-1.11.1.min.js"
+			src="./js/jquery-1.11.1.min.js"
 		></script>
-		<script type="text/javascript" src="./js/main.js"></script>
+		<!-- jquery collision -->
+		<script
+			type="text/javascript"
+			src="./js/jquery-collision.min.js"
+		></script>
 		<!-- javascript customizado - principal -->
+		<script type="text/javascript" src="./js/main.js"></script>
 	</body>
 </html>
